# WordleFrontend

./: .gitignore  Cargo.toml  README.md  index.html
manifest/: manifest.json
src/: app.rs  main.css
src/app/components/atoms/: letter_input_row.rs  main_title.rs  mod.rs
