[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features=["csr"] }
gloo = "0.8.0"
serde = "1.0.160"
serde_json = "1.0.96"
stylist = {version="0.12.0", features = ["yew", "parser"]}
wasm-bindgen = "0.2.84"
web-sys = {version = "0.3.61", features = ["HtmlInputElement"]}